test/src/e2e_vm_tests/test_programs/should_fail/module_privacy/src/alpha.sw
library;

pub fn foo() {}
fn bar() {}